# Aegis

./: .gitignore  README.md  package-lock.json  package.json
src/api/: index.ts
src/api/routes/: hashRoutes.ts
src/api/services/: hashService.ts
src/backend/: CMakeLists.txt
src/backend/src/: hash_checker.cpp
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: global.d.ts  main.ts  preload.ts  renderer.ts
src/frontend/src/css/: blue.css  login.css  red.css  styles.css
src/frontend/src/pages/: blue_team.html  index.html  red_team.html  signin.html  signup.html
